[profile.release]
debug = true

[workspace]
members = [
  "components/builder-api-client",
  "components/butterfly",
  "components/common",
  "components/core",
  "components/hab",
  "components/http-client",
  "components/launcher",
  "components/launcher-client",
  "components/launcher-protocol",
  "components/pkg-export-container",
  "components/pkg-export-tar",
  "components/rst-reader",
  "components/sup",
  "components/sup-client",
  "components/sup-protocol",
  "components/win-users",
  "test-services/test-probe",
]

# Pulling from git until
# https://github.com/nix-rust/nix/commit/3c2107bdc221a90b02d3f7118dd96f3496762cd0
# is released, which will be the next release after v0.17.0
#
# Patched at the workspace level since multiple crates use this, and
# need to use the same version to properly interoperate.
[patch.crates-io]
nix = {  git = "https://github.com/nix-rust/nix.git", rev = "3c2107bdc221a90b02d3f7118dd96f3496762cd0" }
