[package]
name = "bldr"
version = "0.4.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
exclude = ["plans/**/*","web/**/*"]

[lib]
name = "bldr"

[[bin]]
name = "bldr"
doc = false

[[test]]
name = "functional"

[dependencies]
bincode = "*"
bitflags = "*"
rustc-serialize = "*"
log = "*"
env_logger = "*"
ansi_term = "*"
gpgme = "*"
hyper = "*"
lazy_static = "*"
lmdb-sys = "*"
tempdir = "*"
toml = "*"
regex = "*"
libc = "*"
url = "*"
fnv = "*"
iron = "*"
router = "*"
time = "*"
uuid = "*"
temp_utp = "*"
rpassword = "*"
rand = "*"
rust-crypto = "*"
threadpool = "*"
urlencoded = "*"
openssl = "*"
walkdir = "*"

[dependencies.bldr_core]
path = "../core"

[dependencies.bldr_depot_core]
path = "../depot-core"

[dependencies.bldr_depot_client]
path = "../depot-client"

[dependencies.wonder]
path = "../../vendor/wonder"

[dependencies.mustache]
git = "https://github.com/adamhjk/rust-mustache"
branch = "fallback_on_missing_extension"

[dependencies.libarchive]
path = "../../vendor/libarchive-rust"

[dependencies.clap]
features = [ "suggestions", "color" ]

[profile.release]
lto = true
