[package]
name = "bldr"
version = "0.4.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
exclude = ["plans/**/*","web/**/*"]

[lib]
name = "bldr"

[[bin]]
name = "bldr"
doc = false

[[test]]
name = "functional"

[dependencies]
rustc-serialize = "*"
log = "*"
env_logger = "*"
ansi_term = "*"
gpgme = "*"
hyper = "*"
tempdir = "*"
toml = "*"
regex = "*"
libc = "*"
url = "*"
iron = "*"
router = "*"
time = "*"
uuid = "*"
temp_utp = "*"
rpassword = "*"
rand = "*"
threadpool = "*"
urlencoded = "*"
openssl = "*"

[dependencies.bldr_core]
path = "../core"

[dependencies.bldr_depot_core]
path = "../depot-core"

[dependencies.bldr_depot_client]
path = "../depot-client"

[dependencies.wonder]
path = "../../vendor/wonder"

[dependencies.mustache]
git = "https://github.com/adamhjk/rust-mustache"
branch = "fallback_on_missing_extension"

[dependencies.clap]
features = [ "suggestions", "color" ]

[profile.release]
lto = true
