[package]
name = "habitat_builder_admin"
version = "0.0.0"
authors = ["Jamie Winsor <reset@chef.io>"]
description = "Habitat-Builder Admin Gateway"
build = "../bldr-build.rs"
workspace = "../../"

[[bin]]
name = "bldr-admin"
doc = false

[dependencies]
bodyparser = "*"
env_logger = "*"
hyper = "*"
iron = "*"
lazy_static = "*"
log = "*"
mount = "*"
persistent = "*"
protobuf = "*"
router = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
toml = { version = "*", features = ["serde"], default-features = false, git = "https://github.com/alexcrichton/toml-rs" , rev = "d39c3f7b3ec95cb3cc1e579d7d747206c66aab74" }
unicase = "*"
urlencoded = "*"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

# JW TODO: Move back to a crate dependency once https://github.com/iron/staticfile/pull/91 has
# been merged into master and released
[dependencies.staticfile]
git = "https://github.com/onur/staticfile"
branch = "iron-0.5"

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"
branch = "release/v0.8"

[dependencies.habitat_core]
path = "../core"

[dependencies.habitat_builder_protocol]
path = "../builder-protocol"

[dependencies.habitat_net]
path = "../net"
