[package]
name = "habitat_builder_admin"
version = "0.0.0"
authors = ["Jamie Winsor <reset@chef.io>"]
description = "Habitat-Builder Admin Gateway"
build = "../build-builder.rs"
workspace = "../../"

[[bin]]
name = "bldr-admin"
path = "src/main.rs"
doc = false

[dependencies]
clippy = {version = "*", optional = true}
bodyparser = "*"
builder-http-gateway = { path = "../builder-http-gateway" }
env_logger = "*"
github-api-client = { path = "../github-api-client" }
habitat_core = { path = "../core" }
habitat-builder-protocol = { path = "../builder-protocol" }
habitat_net = { path = "../net" }
hyper = "0.10"
iron = "*"
log = "*"
mount = "*"
persistent = "*"
protobuf = "*"
router = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
staticfile = "*"
toml = { version = "*", default-features = false }
unicase = "*"
# JW TODO: Switch back to crates version once an updated version is published to crates.io
# which leverages the latest version of bodyparser
urlencoded = { version = "*", git = "https://github.com/iron/urlencoded" }

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"
branch = "release/v0.8"
