[package]
name = "habitat_api_client"
version = "0.0.0"
edition = "2018"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
workspace = "../../"

[dependencies]
broadcast = "*"
bytes = "*"
chrono = "*"
env = "*"
futures = "*"
habitat_core = { path = "../core" }
habitat_http_client = { path = "../http-client" }
log = "^0.4.11"
pbr = "*"
percent-encoding = "*"
rand = "*"
regex = "*"
reqwest = { version = "*", features = ["blocking", "json", "stream"] }
serde = "*"
serde_derive = "*"
serde_json = { version = "*", features = [ "preserve_order" ] }
tee = "*"
tokio = { version = "^0.2", features = ["full"] }
tokio-util = "^0.6"
url = "*"
