[package]
name = "habitat_api_client"
version = "0.0.0"
edition = "2021"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
workspace = "../../"

[dependencies]
broadcast = "*"
bytes = "*"
chrono = "*"
futures = "*"
habitat_core = { path = "../core" }
habitat_http_client = { path = "../http-client" }
log = "0.4"
pbr = "*"
percent-encoding = "*"
rand = "*"
regex = "*"
reqwest = { version = "*", features = ["blocking", "json", "stream"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*", features = [ "preserve_order" ] }
tee = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat", "codec"] }
url = "*"
