[package]
name = "habitat_builder_api"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder HTTP API gateway"
build = "../build-builder.rs"
workspace = "../../"

[[bin]]
name = "bldr-api"
path = "src/main.rs"
doc = false

[dependencies]
clippy = {version = "*", optional = true}
constant_time_eq = "*"
base64 = "*"
bodyparser = "*"
builder-http-gateway = { path = "../builder-http-gateway" }
env_logger = "*"
github-api-client = { path = "../github-api-client" }
habitat-builder-protocol = { path = "../builder-protocol" }
hex = "*"
hyper = "*"
iron = "*"
log = "*"
mount = "*"
openssl = "*"
params = "*"
persistent = "*"
protobuf = "*"
router = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
staticfile = "*"
toml = { version = "*", features = ["serde"], default-features = false }
typemap = "*"
unicase = "*"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"
branch = "release/v0.8"

[dependencies.habitat_core]
path = "../core"

[dependencies.builder_core]
path = "../builder-core"

[dependencies.habitat_depot]
path = "../builder-depot"

[dependencies.habitat_http_client]
path = "../http-client"

[dependencies.habitat_net]
path = "../net"
