[package]
name = "habitat_builder_db"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder Database Library"
workspace = "../../"

[dependencies]
log = "*"
r2d2 = "*"
time = "*"
postgres = "*"
r2d2_postgres = "*"
num_cpus = "*"

[features]
functional = []
