[package]
name = "habitat_builder_db"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder Database Library"
workspace = "../../"

[dependencies]
log = "*"
r2d2 = "*"
time = "*"
postgres = "*"
rand = "*"
r2d2_postgres = "*"
serde = "*"
serde_derive = "*"
num_cpus = "*"
fnv = "*"
fallible-iterator = "*"
threadpool = "*"

[dependencies.habitat_core]
path = "../core"

[dependencies.habitat_net]
path = "../net"

[dependencies.habitat_builder_protocol]
path = "../builder-protocol"

[features]
functional = []
