[package]
name = "habitat_builder_db"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder Database Library"
workspace = "../../"

[dependencies]
clippy = {version = "*", optional = true}
habitat-builder-protocol = { path = "../builder-protocol" }
log = "*"
diesel = { version = "*", features = ["postgres"] }
r2d2 = "*"
time = "*"
rand = "*"
serde = "*"
serde_derive = "*"
num_cpus = "*"
fnv = "*"
fallible-iterator = "*"
postgres = "*"
postgres-shared = "*"
r2d2_postgres = "*"
r2d2-diesel = "*"
threadpool = "*"
url = "*"

[dependencies.habitat_core]
path = "../core"

[dependencies.habitat_net]
path = "../net"
