[package]
name = "habitat_builder_dbcache"
version = "0.8.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder Database Access Library"
workspace = "../../"

[dependencies]
env_logger = "*"
log = "*"
num_cpus = "*"
protobuf = "*"
r2d2 = "*"
rustc-serialize = "*"
time = "*"

[dependencies.habitat_builder_protocol]
path = "../builder-protocol"

[dependencies.r2d2_redis]
git = "https://github.com/habitat-sh/r2d2-redis.git"
branch = "habitat"

[dependencies.redis]
git = "https://github.com/habitat-sh/redis-rs"
branch = "habitat"

[replace]
"redis:0.7.0" = { git = 'https://github.com/habitat-sh/redis-rs', branch = 'habitat' }

[features]
functional = []
