[package]
name = "habitat_depot"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder package depot"
build = "../bldr-build.rs"
workspace = "../../"

[[bin]]
name = "bldr-depot"
path = "src/main.rs"
doc = false

[dependencies]
clippy = {version = "*", optional = true}
base64 = "*"
bodyparser = "*"
env_logger = "*"
hyper = "*"
iron = "*"
iron-test = "*"
libc = "*"
libarchive = "*"
log = "*"
mount = "*"
persistent = "*"
protobuf = "*"
r2d2 = "*"
regex = "*"
router = "*"
rust-crypto = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tempfile = "*"
time = "*"
toml = { version = "*", features = ["serde"], default-features = false }
unicase = "*"
url = "*"
# JW TODO: Switch back to crates version once an updated version is published to crates.io
# which leverages the latest version of bodyparser
urlencoded = { version = "*", git = "https://github.com/iron/urlencoded" }
walkdir = "*"
uuid = { version = "0.4", features = ["v4"] }

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.habitat_builder_protocol]
path = "../builder-protocol"

[dependencies.builder_core]
path = "../builder-core"

[dependencies.habitat_core]
path = "../core"

[dependencies.habitat_net]
path = "../net"

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"
branch = "release/v0.8"

[dev-dependencies]
url = "*"
uuid = "*"

[features]
default = []
functional = []
