[package]
name = "builder-http-gateway"
version = "0.0.0"
authors = ["Jamie Winsor <reset@habitat.sh"]
description = "A library for implementing Builder HTTP Gateways"
workspace = "../../"

[dependencies]
base64 = "*"
bodyparser = "*"
env_logger = "*"
github-api-client = { path = "../github-api-client" }
habitat-builder-protocol = { path = "../builder-protocol" }
habitat_core = { path = "../core" }
builder_core = { path = "../builder-core" }
habitat_net = { path = "../net" }
hyper = "0.10"
iron = "*"
log = "*"
mount = "*"
num_cpus = "*"
params = "*"
persistent = "*"
protobuf = "*"
router = "*"
segment-api-client = { path = "../segment-api-client" }
serde = "*"
serde_derive = "*"
serde_json = "*"
staticfile = "*"
toml = { version = "*", default-features = false }
# JW: Lock to 1.x until we can upgrade Hyper past 10.x
unicase = "1"
# JW TODO: Switch back to crates version once an updated version is published to crates.io
# which leverages the latest version of bodyparser
urlencoded = { version = "*", git = "https://github.com/iron/urlencoded" }

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"
branch = "release/v0.8"
