[package]
name = "habitat_builder_jobsrv"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder Job Server"
build = "../bldr-build.rs"
workspace = "../../"

[[bin]]
name = "bldr-job-srv"
doc = false

[dependencies]
env_logger = "*"
linked-hash-map = "*"
log = "*"
protobuf = "*"
postgres = "*"
rand = "*"
r2d2 = "*"
toml = { version = "*", features = ["serde"], default-features = false, git = "https://github.com/alexcrichton/toml-rs" , rev = "d39c3f7b3ec95cb3cc1e579d7d747206c66aab74" }

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.habitat_core]
path = "../core"

[dependencies.habitat_builder_protocol]
path = "../builder-protocol"

[dependencies.habitat_net]
path = "../net"

[dependencies.habitat_builder_db]
path = "../builder-db"

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"
branch = "release/v0.8"

[features]
functional = []
