[package]
name = "habitat_builder_jobsrv"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder Job Server"
build = "../bldr-build.rs"
workspace = "../../"

[[bin]]
name = "bldr-job-srv"
doc = false

[dependencies]
aws-sdk-rust = "*"
env_logger = "*"
linked-hash-map = "*"
log = "*"
protobuf = "*"
postgres = { version = "*", features = ["with-chrono"] }
chrono = { version = "*", features = ["serde"] }
rand = "*"
r2d2 = "*"
serde = "*"
serde_derive = "*"
sha2 = "*"
toml = { version = "*", features = ["serde"], default-features = false }
url = "*"
hyper = "*"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.habitat_core]
path = "../core"

[dependencies.habitat_builder_protocol]
path = "../builder-protocol"

[dependencies.habitat_net]
path = "../net"

[dependencies.habitat_builder_db]
path = "../builder-db"

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"
branch = "release/v0.8"

[features]
functional = []
