[package]
name = "habitat_builder_jobsrv"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder Job Server"
build = "../build-builder.rs"
workspace = "../../"

[[bin]]
name = "bldr-jobsrv"
path = "src/main.rs"
doc = false

[dependencies]
builder_core = { path = "../builder-core" }
clippy = {version = "*", optional = true}
aws-sdk-rust = "*"
env_logger = "*"
habitat_core = { path = "../core" }
habitat_net = { path = "../net" }
habitat_builder_db = { path = "../builder-db" }
habitat-builder-protocol = { path = "../builder-protocol" }
lazy_static = "*"
linked-hash-map = "*"
log = "*"
protobuf = "*"
postgres = { version = "*", features = ["with-chrono"] }
chrono = { version = "*", features = ["serde"] }
rand = "*"
r2d2 = "*"
serde = "*"
serde_derive = "*"
sha2 = "*"
toml = { version = "*", features = ["serde"], default-features = false }
url = "*"
hyper = "*"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"
branch = "release/v0.8"
