[package]
name = "habitat_builder_protocol"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder Network Server Protocol"
build = "build.rs"
workspace = "../../"

[dependencies]
protobuf = "*"
serde = "*"
time = "*"

[dependencies.habitat_core]
path = "../core"

[dependencies.redis]
git = "https://github.com/habitat-sh/redis-rs"
branch = "habitat"

[build-dependencies]
pkg-config = "0.3"
serde_codegen = "*"

[features]
functional = []
protocols = []
